Changes made to Week 1 Assignment Files, after review

--- a/Week-1/Exercise-1.2/index.html
+++ b/Week-1/Exercise-1.2/index.html
@@ -47,7 +47,7 @@
 
           <div class="top-text">
 
-               <h2>Catty Board Top 100 Single Charts(11.06.36)</h1>
+               <h2>Catty Board Top 100 Single Charts(11.06.36)</h2>   <!--     changes made  -->
         
                <span>Unknown Artist</span>
                 <br>
